upd contrastive learning

--- a/assignment_contrastive_learning/assignment.ipynb
+++ b/assignment_contrastive_learning/assignment.ipynb
@@ -22,11 +22,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "4_XqkYMlw0Nh",
-    "outputId": "178aa3bc-2a3b-490b-ca95-45dccf6c11cb"
+    "id": "4_XqkYMlw0Nh"
    },
    "outputs": [],
    "source": [
@@ -95,7 +91,7 @@
     "* `rw_subgraph` — builds a subgraph based on random walk\n",
     "* `identical` — the same graph, no augmentation\n",
     "\n",
-    "Augmentations are applied to graphs with self-loops, so keep self-loops during edges perturbation. Parallel edges are allowed after perturbation. A random walk subgraph is building by (1) adding a random starting node, (2) adding all its neighbors, (3) adding all neighbors of a random node in the subgraph and repeating the step 3 while number of nodes exceeds the threshold `(1 - ratio)`."
+    "Augmentations are applied to graphs with self-loops, so keep self-loops during edges perturbation. Parallel edges are allowed after perturbation. A random walk subgraph is constructed by (1) adding a random starting node, (2) adding all its neighbors, (3) adding all neighbors of a random node in the subgraph and repeating the step 3 while number of nodes exceeds the threshold `(1 - ratio)`."
    ]
   },
   {
@@ -524,7 +520,7 @@
     "id": "FI_iKY-_jCQS"
    },
    "source": [
-    "Let an encoder be the two-layers Kapf's GCN (`GraphConv` in `dgl`) with mean graph pooling and two-layers MLP projection head. All layers except of input and output ones have `hidden_dim` dimensionality. Apply ReLU as an activation function.\n",
+    "Let an encoder be the two-layers GCN (`GraphConv` in `dgl`) with mean graph pooling and two-layers MLP projection head. All layers except of input and output ones have `hidden_dim` dimensionality. Apply ReLU as an activation function.\n",
     "\n",
     "Write a class `GCNEncoder` with a function `forward` that takes a batch of graphs, node attrubute name in `ndata` collection and returns graph embeddings."
    ]
@@ -778,9 +774,11 @@
     "id": "N-wiMTo1vidM"
    },
    "source": [
-    "In graph contrastive learning, pre-training is performed through maximizing the agreement between two augmented views of the same graph via a contrastive loss in the latent space. Contrastive loss function is defined to enforce maximizing the consistency between positive pairs $z_i$, $z_j$ compared with negative pairs. Here we utilize the NT-Xent Loss that is defined for $n$-th graph in a batch as follows:\n",
-    "$$\\ell_{n}=-\\log \\frac{\\exp \\left(\\operatorname{sim}\\left(\\boldsymbol{z}_{n, i}, \\boldsymbol{z}_{n, j}\\right) / \\tau\\right)}{\\sum_{n^{\\prime}=1, n^{\\prime} \\neq n}^{N} \\exp \\left(\\operatorname{sim}\\left(\\boldsymbol{z}_{n, i}, \\boldsymbol{z}_{n^{\\prime}, j}\\right) / \\tau\\right)}$$\n",
-    "where $\\text{sim}$ is cosine similarity and $\\tau$ is a temperature parameter.\n",
+    "In graph contrastive learning, pre-training is performed through maximizing the agreement between two augmented views of the same graph via a contrastive loss in the latent space. Contrastive loss function is defined to enforce maximizing the consistency between positive pairs $z_i$, $z_j$ (the same graph under different augmentations) compared with negative pairs. Here we utilize the NT-Xent Loss that is defined for $n$-th graph in a batch of $N$ graphs as follows:\n",
+    "\n",
+    "$$l_{n}=-\\log \\frac{\\exp \\left(\\text{sim}(z_{n, i}, z_{n, j}) / \\tau \\right)}{\\sum_{n'=1, n' \\neq n}^{N} \\exp \\left( \\text{sim}(z_{n, i}, z_{n', j}) / \\tau \\right)}$$\n",
+    "\n",
+    "where $\\text{sim}$ is cosine similarity $\\text{sim}(z_i, z_j) = z_i^\\top z_j / (\\| z_i \\| \\cdot \\| z_j \\|)$ and $\\tau$ is a temperature parameter.\n",
     "\n",
     "Source: https://arxiv.org/pdf/2010.13902.pdf\n",
     "\n",
@@ -1079,7 +1077,7 @@
     "id": "aZKXihALD-bC",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "780d6a5517f735bed457bebde8d611a7",
+     "checksum": "9bacd4e482c685212ad3ce17189341fe",
      "grade": true,
      "grade_id": "cell-bbe64c2a5aac60d2",
      "locked": true,
@@ -1094,10 +1092,10 @@
     "augs = ['drop_nodes', 'pert_edges', 'attr_mask', 'rw_subgraph', 'identical']\n",
     "res = run('proteins.bin', n_epochs=30, augs=augs)\n",
     "symm = (res.T + res - np.diag(res[range(5), range(5)])).sum(0)\n",
-    "assert symm[0] > symm[4]\n",
-    "assert symm[2] > symm[4]\n",
     "assert np.all((res > 0).sum(0) == np.arange(5) + 1)\n",
-    "assert np.all(res[res > 0] > 0.6)"
+    "assert np.all(res[res > 0] > 0.6)\n",
+    "assert symm[0] > symm[4]\n",
+    "assert symm[2] > symm[4]"
    ]
   },
   {
@@ -1129,7 +1127,7 @@
  "metadata": {
   "colab": {
    "collapsed_sections": [],
-   "name": "gnn assignment.ipynb",
+   "name": "assignment.ipynb",
    "provenance": []
   },
   "kernelspec": {
