upd contrastive learning

--- a/assignment_contrastive_learning/assignment.ipynb
+++ b/assignment_contrastive_learning/assignment.ipynb
@@ -934,11 +934,11 @@
     "id": "WdL1hIKg445o",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d685f59af3808710f627f3e5e56ae549",
+     "checksum": "5443cd13e0cea4238e275374b4054da6",
      "grade": true,
      "grade_id": "cell-0f733c004d847d5d",
      "locked": true,
-     "points": 1,
+     "points": 0,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -997,7 +997,20 @@
      "base_uri": "https://localhost:8080/",
      "height": 407
     },
+    "deletable": false,
+    "editable": false,
     "id": "0jCVRYCVhLcz",
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "49e14ce5bf70181ba3f14e3c78ea9524",
+     "grade": true,
+     "grade_id": "cell-fb08ba989918e2e7",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    },
     "outputId": "e8c45489-5dae-4ef5-b075-24131989af46"
    },
    "outputs": [],
