upd recurrent generation

--- a/assignment_recurrent_generation/assignment.ipynb
+++ b/assignment_recurrent_generation/assignment.ipynb
@@ -471,7 +471,7 @@
    "source": [
     "We aim to train the model so that it can be able to generate realistic networks. Fortunately, explicit parametric models can be optimized by maximim likelihood estimation. In torch, it can be performed by minimization negative log likelihood loss.\n",
     "\n",
-    "Write a function `bernoulli_nll` that takes parameters `theta` and a realization `label`, returns the mean log likelihood."
+    "Write a function `bernoulli_nll` that takes parameters `theta` and a realization `label`, returns the mean negative log likelihood."
    ]
   },
   {
