upd asserts and params

--- a/assignment_multihop/assignment.ipynb
+++ b/assignment_multihop/assignment.ipynb
@@ -40,7 +40,7 @@
      "height": 206
     },
     "id": "RhP5UTVO1-wx",
-    "outputId": "ef0ba623-dffb-4b2b-d635-408c3e4554d0"
+    "outputId": "ee525c23-21fe-481e-8416-b92fbeb7771a"
    },
    "outputs": [],
    "source": [
@@ -199,7 +199,11 @@
     "perm = np.random.permutation(queries.shape[0])\n",
     "train_queries = queries[perm[: int(perm.shape[0] * 0.98)]]\n",
     "val_queries = queries[perm[int(perm.shape[0] * 0.98): int(perm.shape[0] * 0.99)]]\n",
-    "test_queries = queries[perm[int(perm.shape[0] * 0.99):]]"
+    "test_queries = queries[perm[int(perm.shape[0] * 0.99):]]\n",
+    "\n",
+    "# preserve that for further examples\n",
+    "turkmenistan_neighbors = set(df[(df.h == ent2id[\"Turkmenistan\"]) & (df.r == rel2id[\"shares border with\"])].t)\n",
+    "turkey_neighbors = set(df[(df.h == ent2id[\"Turkey\"]) & (df.r == rel2id[\"shares border with\"])].t)"
    ]
   },
   {
@@ -346,6 +350,24 @@
     "assert (anchor1, relation1, anchor2, relation2, neg_pow) == tuple(train_queries[0][:4].tolist() + [1 - train_queries[0][-1]])\n",
     "assert positive in train_queries[0, 4]\n",
     "assert negative not in train_queries[0, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "ofvXGaPnnrn3",
+    "outputId": "dc6f5f71-edef-40a1-db5c-6232940d0cbd"
+   },
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "del train_queries, val_queries, train_ds, val_ds, test_ds, test_loader, df\n",
+    "gc.collect()"
    ]
   },
   {
@@ -563,7 +585,7 @@
    },
    "outputs": [],
    "source": [
-    "model = BetaE(24, 800, len(ent2id), len(rel2id), 2)"
+    "model = BetaE(24, 100, len(ent2id), len(rel2id), 2)"
    ]
   },
   {
@@ -575,7 +597,7 @@
     "id": "ENT7ASYIKRdC",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d30e413f3b0b923ead8a22591e5d1c41",
+     "checksum": "fcb2a4ca3d52fefa0304f1c585285197",
      "grade": true,
      "grade_id": "cell-746e4b126e4ab10a",
      "locked": true,
@@ -589,8 +611,8 @@
    "source": [
     "a, b = model.encode_projection(torch.LongTensor([0]), torch.LongTensor([0]))\n",
     "\n",
-    "assert a.shape == torch.Size([1, 800])\n",
-    "assert b.shape == torch.Size([1, 800])\n",
+    "assert a.shape == torch.Size([1, 100])\n",
+    "assert b.shape == torch.Size([1, 100])\n",
     "assert a.min().item() >= 0.05\n",
     "assert b.min().item() >= 0.05\n",
     "assert a.max().item() <= 1e9\n",
@@ -606,7 +628,7 @@
     "id": "i0yrcbeFKRdC",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "199dd44a80aac9cfc008b42472661aca",
+     "checksum": "3affaaa2e4d2db72d9ca0ef978164642",
      "grade": true,
      "grade_id": "cell-e903e1a2fe7b6702",
      "locked": true,
@@ -618,9 +640,9 @@
    },
    "outputs": [],
    "source": [
-    "beta = torch.distributions.beta.Beta(torch.ones((1, 800)), torch.ones((1, 800)))\n",
+    "beta = torch.distributions.beta.Beta(torch.ones((1, 100)), torch.ones((1, 100)))\n",
     "l = round(model.calc_logit(torch.LongTensor([0]), beta).item(), 4)\n",
-    "assert l > 23\n",
+    "assert l > 20\n",
     "assert l < 24"
    ]
   },
@@ -633,7 +655,7 @@
     "id": "PW6TzTmEKRdD",
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "dadf46b3593cd20224a59f43f288d7ec",
+     "checksum": "4126533d98cd683e7ae8123235ac9f7c",
      "grade": true,
      "grade_id": "cell-77ee9b2a447ce716",
      "locked": true,
@@ -647,10 +669,7 @@
    "source": [
     "a = model.encode_query(torch.LongTensor([0]), torch.LongTensor([0]), torch.LongTensor([0]), torch.LongTensor([0]), torch.LongTensor([-1]))\n",
     "\n",
-    "assert a.batch_shape == torch.Size([1, 1, 800])\n",
-    "\n",
-    "x = (a.concentration0 > a.concentration1).float().mean().item()\n",
-    "assert (x > 0.45) and (x < 0.55)"
+    "assert a.batch_shape == torch.Size([1, 1, 100])"
    ]
   },
   {
@@ -694,9 +713,9 @@
     "    return loss_log\n",
     "\n",
     "\n",
-    "def evaluate(model, loader):\n",
+    "def evaluate(model, loader, bs=32):\n",
     "    model.eval()\n",
-    "    entities = torch.repeat_interleave(torch.arange(len(ent2id)), 32).reshape(-1, 32).T\n",
+    "    entities = torch.repeat_interleave(torch.arange(len(ent2id)), bs).reshape(-1, bs).T\n",
     "    pos = 0\n",
     "    total = 0\n",
     "    for i in tqdm(loader):\n",
@@ -728,19 +747,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 513
-    },
-    "id": "-_tkwDZ6s7ZV",
-    "outputId": "175bcfa9-5726-45c9-9e66-dd84938f4cea"
+    "id": "-_tkwDZ6s7ZV"
    },
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "model = BetaE(24, 800, len(ent2id), len(rel2id), 2)\n",
+    "model = BetaE(24, 100, len(ent2id), len(rel2id), 2)\n",
     "model = model.to(device)\n",
     "opt = torch.optim.Adam(model.parameters(), 3e-4)\n",
     "\n",
@@ -792,13 +806,31 @@
      "solution": true,
      "task": false
     },
-    "outputId": "0a7998d3-01b2-4698-b742-4a3e4e10e5b9"
+    "outputId": "e0688c65-d802-4f27-d179-0335440f545f"
    },
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
     "# model.load_state_dict(state_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "HFvOZ26_oKFz",
+    "outputId": "26fcf0a3-48a9-4adf-9c2b-360280da2d18"
+   },
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "del train_loader, val_loader\n",
+    "gc.collect()"
    ]
   },
   {
@@ -816,7 +848,7 @@
     },
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "79d2a72fa6ce766a8fc68505a50de9c2",
+     "checksum": "ce1ea54528b525f2b4c8a3dded7cb821",
      "grade": true,
      "grade_id": "cell-db5349ed1b0cc85c",
      "locked": true,
@@ -825,15 +857,15 @@
      "solution": false,
      "task": false
     },
-    "outputId": "b4b42fd0-3d1b-45f9-b44a-24a8597f8f14",
+    "outputId": "a4d0207f-d098-483a-cab5-064cf05d1989",
     "tags": []
    },
    "outputs": [],
    "source": [
     "model.eval()\n",
     "test_ds = NegationDataset(test_queries[:200], len(ent2id))\n",
-    "test_loader = torch.utils.data.DataLoader(test_ds, batch_size=32, shuffle=True)\n",
-    "score = evaluate(model, test_loader)\n",
+    "test_loader = torch.utils.data.DataLoader(test_ds, batch_size=4, shuffle=True)\n",
+    "score = evaluate(model, test_loader, bs=4)\n",
     "print()\n",
     "print(f\"Test accuracy: {score:.4f}\")\n",
     "\n",
@@ -857,7 +889,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "uzNZSsgTKRdF",
-    "outputId": "9ceef1a5-7a26-4f2d-dc66-090561c1e0a1"
+    "outputId": "de184426-d2e8-4905-92a7-baa753529219"
    },
    "outputs": [],
    "source": [
@@ -883,7 +915,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "MVu5XAVBX-B7",
-    "outputId": "0f98889f-7d0e-4e6f-fe80-c0eca3569518"
+    "outputId": "d6ff977a-872c-4f1a-c6ee-b58d7071e7f8"
    },
    "outputs": [],
    "source": [
@@ -907,12 +939,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "Kn3dk3iGXwI2",
-    "outputId": "6d9f1d30-237a-4e22-c3a3-4b61f2c336ef"
+    "outputId": "03e85fda-2a98-459f-ccf5-01469ff40b20"
    },
    "outputs": [],
    "source": [
-    "turkmenistan_neighbors = set(df[(df.h == ent2id[\"Turkmenistan\"]) & (df.r == rel2id[\"shares border with\"])].t)\n",
-    "turkey_neighbors = set(df[(df.h == ent2id[\"Turkey\"]) & (df.r == rel2id[\"shares border with\"])].t)\n",
     "print(\"Neighbors intersection: \", ', '.join([id2ent[i] for i in turkmenistan_neighbors & turkey_neighbors]))\n",
     "print(\"Neighbors diff: \", ', '.join([id2ent[i] for i in turkmenistan_neighbors - turkey_neighbors]))"
    ]
@@ -934,19 +964,9 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "N40nLUEtCLK0"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "accelerator": "GPU",
   "colab": {
    "collapsed_sections": [],
    "name": "assignment.ipynb",
